Mon Jun 30 11:52:22 2003  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs\examples\Notify\Lanes\Consumer.cpp:
	* orbsvcs\examples\Notify\Lanes\Consumer_Client.cpp:
	* orbsvcs\examples\Notify\Lanes\ORB_Objects.cpp:
	* orbsvcs\examples\Notify\Lanes\ORB_Run_Task.cpp:
	* orbsvcs\examples\Notify\Lanes\Supplier.cpp:
	* orbsvcs\examples\Notify\Lanes\Supplier_Client.cpp:

	  Removed references to .inl files.
	
Mon Jun 30 09:33:31 2003  Gan Deng  <gan.deng@vanderbilt.edu>

        * performance-tests/Sequence_Latency/Deferred/client.bor

          Added this missing BCB makefile client.bor.

Sun Jun 29 02:09:20 2003  Yamuna Krishnamurthy  <yamuna@oomworks.com>

	* orbsvcs/tests/AVStreams/Asynch_Three_Stage/Connection_Manager.cpp: 

	  Added explicit template instantiation for hash map of endpoint
	  addresses. This should fix the compile problem on sun solaris.
	
Sun Jun 29 00:26:56 2003  Yamuna Krishnamurthy  <yamuna@oomworks.com>

	* tao/corbafwd.h: 
	* tao/Exeception.h: 	
	* tao/Exeception.cpp: 		

	  Added THREAD_CANCELLED to CORBA system exception. The exception
	  is thrown when a Distributable Thread is cancelled. This should
	  fix compile problems.

	* TAOACE.dsw:
	* tao/TAO.dsw:
	* tao/RTScheduling/TAO_RTScheduler.dsp:	
	* tao/RTScheduling/TAO_RTScheduler.rc:		

	  Added project and workspace files to build RTScheduler library on
	  windows.

Fri Jun 27 12:12:09 2003  Chris Cleeland  <cleeland_c@ociweb.com>

	* orbsvcs/orbsvcs/Event/ECG_UDP_Receiver.cpp:
	* orbsvcs/orbsvcs/Event/ECG_Mcast_EH.cpp:
	* orbsvcs/orbsvcs/Event/ECG_Mcast_Gateway.cpp:
	* orbsvcs/orbsvcs/Event/ECG_UDP_Sender.cpp:

	  Finally fixed the explicit instantiation for activate<>.  As it
	  turns out, the problem is that the build on which this was
	  failing had exceptions turned off, which required the
	  ACE_ENV_ARG_DECL at the end of the arg list.  Other explicit
	  instantiation builds didn't trip the problem because they had
	  exceptions turned on.
